first point of the modal app for azdome.com.ua

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,9 +24,18 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color:blueviolet">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="promo-modal-window" 
+      data-product-title="Portable Tire inflator with Analogue Pressure Gauge | Home (110V) and Car (12V) 120 PSI" 
+      data-product-price="$49.99" 
+      data-product-price-old="$62.99" 
+      data-background-image="https://cdn.shopify.com/s/files/1/2110/7121/files/promo-image-tire-inflator-model-h.jpg"
+      data-product-image="https://cdn.shopify.com/s/files/1/2110/7121/products/portable-tire-inflator-air-pump-ac-dc.jpg"
+      data-button-url="https://kensun.com"
+      data-send-button-text ="Отправить"
+      >
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
